# TPL_LAB1

./: build.sh  configure.sh
.build/lab1/Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
.build/lab1/Debug/example/: cmake_install.cmake
example/: CMakeLists.txt
example/src/: c_lexer.c  c_lexer.h  c_lexer.l  flex.sh  main.c
